--- a/style.css
+++ b/style.css
@@ -43,29 +43,18 @@ p {
   font-style: normal;
   font-size: 1.2rem;
 }
-.button a {
+
+/* Style af knapper på forside */
+.read_more {
   font-family: balboa-plus-fill, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 1.5rem;
-  text-decoration: none;
   color: #af7171;
-}
-
-.button a:hover {
-  color: #c79f93;
-}
-
-.button {
-  border: 2px solid #af7171;
+  border: 0.15rem solid #af7171;
   background-color: transparent;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
+  padding: 0.8rem;
+  width: 8rem;
 }
 
-.button::after {
+.read_more::after {
   content: "";
   width: 0%;
   height: 0.1rem;
@@ -75,7 +64,7 @@ p {
   transition: 0.5s;
 }
 
-.button:hover::after {
+.read_more:hover::after {
   width: 100%;
 }
 
@@ -153,18 +142,21 @@ header nav {
   text-align: center;
 }
 
+/* index-side */
 .index #third_section {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  place-items: center;
+  gap: 0.5rem;
   text-align: center;
 }
 
 /* Indhold i bokse (pad) og luft om bokse (marg)*/
 .index #third_section article {
-  border: 0.4rem solid #e6cacc;
+  border: 0.2rem solid #af7171;
   margin: 3rem;
-}
-
-.index #third_section .button {
-  margin-bottom: 2rem;
+  width: 300px;
+  height: 250px;
 }
 
 .index #fourth_section {
@@ -172,26 +164,78 @@ header nav {
   justify-content: center;
 }
 
-/*******Destinationer*******/
+/********************** DESTINATIONER *********************/
 .destinationer #first_section {
   text-align: center;
 }
+.destinationer .data_container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  margin: 1rem;
+}
+
+/* box-style */
+.destinationer #liste {
+  border: solid orange 0.1rem;
+  height: 350px;
+  margin: 0.8em;
+  padding: 0.5em;
+  text-align: center;
+}
+
+/* Style af knapper */
+.destinationer .knapper,
+.destinationer h2 {
+  grid-column: 2/3;
+  text-align: center;
+}
+
+.destinationer button {
+  font-family: balboa-plus-fill, sans-serif;
+  color: black;
+  border: 0.1rem solid black;
+  background-color: transparent;
+  padding: 0.8rem;
+  margin: 0.5rem;
+  width: 8rem;
+}
+
+.destinationer button::after {
+  content: "";
+  width: 0%;
+  height: 0.1rem;
+  background: black;
+  display: block;
+  margin: auto;
+  transition: 0.5s;
+}
+
+.destinationer button:hover::after {
+  width: 100%;
+}
+
+/* ----- */
+
+/* ----- */
+
+/* ----- */
+
+/* ----- */
+
+/* ----- */
+
+/* ----- */
+
+/* ----- */
+
+/* ----- */
+
+/* ----- */
+
+/* ----- */
 
 @media (min-width: 700px) {
-  /************* Index grid section ************/
-  .index #third_section {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto;
-    gap: 0.5rem;
-  }
-
-  /* Luft om bokse (marg)*/
-  .index #third_section article {
-    margin: 1rem;
-  }
-
-  /***********Menu responsive**********/
+  /***********Burgermenu**********/
   #menuknap {
     display: none;
   }
