--- a/style.css
+++ b/style.css
@@ -37,11 +37,40 @@ h3 {
   font-size: 1.5rem;
 }
 
+h4 {
+  font-family: balboa-plus-fill, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 2.5rem;
+  text-align: center;
+}
+
 p {
   font-family: nimbus-sans, sans-serif;
   font-weight: 300;
   font-style: normal;
   font-size: 1.2rem;
+}
+
+/* Infoside */
+
+#om_os {
+  display: grid;
+  place-items: center;
+  text-align: center;
+  background-color: #f1c9c9;
+  padding: 5rem;
+}
+
+#om_os h4 {
+  margin-top: 0rem;
+}
+
+#om_os p {
+  margin-left: 10rem;
+  margin-right: 10rem;
+  margin-top: 0rem;
+  font-weight: bold;
 }
 
 /* Style af knapper på forside */
