--- a/style.css
+++ b/style.css
@@ -322,6 +322,49 @@ button:hover::after {
 
 /* ----- */
 
+hr {
+  margin-top: 5rem;
+  margin-bottom: 0;
+  color: orange;
+}
+footer {
+  display: grid;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
+/* Centrering af tekst */
+footer .section_wrapper {
+  text-align: center;
+}
+
+/* Ikoner vandret og center */
+.socialemedier {
+  display: flex;
+  justify-content: center;
+}
+
+/* Str img */
+footer img {
+  width: 4rem;
+  margin: 0.5rem;
+  cursor: pointer;
+}
+
+/* Links */
+#section_footer a {
+  text-decoration: none;
+  color: black;
+  font-family: nimbus-sans, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 1.2rem;
+}
+
+#section_footer a:hover {
+  color: #00000052;
+}
+
 @media (min-width: 1100px) {
   /***********Burgermenu**********/
   #menuknap {
