--- a/style.css
+++ b/style.css
@@ -344,13 +344,15 @@ footer img {
 }
 
 /* Links */
-#section_footer a {
+#section_footer a, a {
   text-decoration: none;
   color: black;
-  font-family: nimbus-sans, sans-serif;
+  font-family: balboa-plus-fill, sans-serif;
+
   font-weight: 300;
   font-style: normal;
   font-size: 1.2rem;
+  
 }
 
 #section_footer a:hover {
