--- a/style.css
+++ b/style.css
@@ -137,7 +137,6 @@ header nav {
 /*Splashbillede*/
 .index #first_section {
   grid-column: 1/4;
-
   width: 100%;
   height: 40vh;
   background-image: url(img/splash.svg);
@@ -147,7 +146,6 @@ header nav {
   grid-template-columns: 1fr auto 1fr;
   grid-template-rows: repeat(3, 1fr);
 }
-
 .index #first_section h1 {
   grid-column: 2/3;
   grid-row: 2/3;
@@ -155,17 +153,7 @@ header nav {
   padding: 0.58rem;
   color: #ff603f;
 }
-
 .index #second_section {
-  text-align: center;
-}
-
-/* index-side */
-.index .data_container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  place-items: center;
-  gap: 0.5rem;
   text-align: center;
 }
 
@@ -174,19 +162,22 @@ header nav {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   margin: 1rem;
 }
-
-/* box-style */
 .index #liste {
+  display: grid;
+  place-content: center;
   border: solid orange 0.1rem;
-  height: 350px;
+  height: 400px;
   margin: 0.8em;
-  padding: 0.5em;
+  padding: 1em;
   text-align: center;
   cursor: pointer;
 }
-
 .index #liste:hover {
   border: solid orange 0.3rem;
+}
+.index #liste img {
+  height: 17rem;
+  width: auto;
 }
 
 .index #fourth_section {
@@ -213,16 +204,23 @@ header nav {
 
 /* box-style */
 .destinationer #liste {
+  display: grid;
+  place-content: center;
   border: solid orange 0.1rem;
-  height: 350px;
+  height: 400px;
   margin: 0.8em;
-  padding: 0.5em;
+  padding: 1em;
   text-align: center;
   cursor: pointer;
 }
 
 .destinationer #liste:hover {
   border: solid orange 0.3rem;
+}
+
+.destinationer #liste img {
+  height: 17rem;
+  width: auto;
 }
 
 /* Style af knapper */
@@ -267,25 +265,7 @@ button:hover::after {
   text-align: center;
 }
 
-/* ----- */
-
-/* ----- */
-
-/* ----- */
-
-/* ----- */
-
-/* ----- */
-
-/* ----- */
-
-/* ----- */
-
-/* ----- */
-
-/* ----- */
-
-/* ----- */
+/********************** FOOTER *********************/
 
 hr {
   margin-top: 5rem;
