--- a/style.css
+++ b/style.css
@@ -72,7 +72,50 @@ p {
   text-align: left;
 }
 
+/* Kontaktformular */
 
+input[type="text"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+/* Kontaktformular knap */
+input[type="submit"] {
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type="submit"]:hover {
+  background-color: #ffffff;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  border-radius: 5px;
+  background-color: #f1d0c0;
+  padding: 20px;
+}
+
+label {
+  font-family: balboa-plus-fill, sans-serif;
+}
+
+.om_os_billede {
+  width: 100%;
+}
 
 /*BURGERMENU*/
 /* Logo og burgermenu opsætning + placering  */
@@ -371,4 +414,24 @@ footer img {
   #single_liste h1 {
     grid-column: 1/3;
   }
+}
+
+@media (max-width: 700px) {
+  .om_os {
+    display: inline;
+  }
+
+  .om_os_billede {
+    display: none;
+  }
+
+  .kontaktformular {
+    padding-top: 2rem;
+  }
+
+  .kontaktformular h2 {
+    text-align: center;
+  }
+
+  
 }
