--- a/style.css
+++ b/style.css
@@ -312,7 +312,6 @@ footer img {
 #section_footer a {
   text-decoration: none;
   color: black;
-  font-family: balboa-plus-fill, sans-serif;
 
   font-weight: 300;
   font-style: normal;
@@ -321,6 +320,14 @@ footer img {
 
 #section_footer a:hover {
   color: #00000052;
+}
+
+@media (min-width: 700px) {
+  /********************** FOOTER *********************/
+  .section_wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 @media (min-width: 1100px) {
