--- a/style.css
+++ b/style.css
@@ -53,23 +53,37 @@ p {
   max-width: 60ch;
 }
 
-/* Infoside */
-.om_os {
-  background-size: cover;
-  padding: 4rem;
+/* Om os side */
+.om_os #first_section {
+  padding: 0.1rem;
   padding-top: 1rem;
-  display: flex;
 }
 
 .om_os_tekst {
   background-color: #f7e2d4;
-  padding: 4rem;
+  padding: 1rem;
   text-align: center;
   padding-top: 1rem;
 }
 
 .om_os_tekst p {
   text-align: left;
+}
+
+.om_os {
+  display: inline;
+}
+
+.om_os_billede {
+  display: none;
+}
+
+.kontaktformular {
+  padding-top: 2rem;
+}
+
+.kontaktformular h2 {
+  text-align: center;
 }
 
 /* Kontaktformular */
@@ -104,17 +118,12 @@ input[type="submit"]:hover {
 
 /* Add a background color and some padding around the form */
 .container {
-  border-radius: 5px;
   background-color: #f1d0c0;
   padding: 20px;
 }
 
 label {
   font-family: balboa-plus-fill, sans-serif;
-}
-
-.om_os_billede {
-  width: 100%;
 }
 
 /*BURGERMENU*/
@@ -365,6 +374,8 @@ footer img {
 #section_footer a:hover {
   color: #00000052;
 }
+@media (min-width: 700px) {
+}
 
 @media (min-width: 1100px) {
   /***********Burgermenu**********/
@@ -414,24 +425,30 @@ footer img {
   #single_liste h1 {
     grid-column: 1/3;
   }
-}
 
-@media (max-width: 700px) {
-  .om_os {
-    display: inline;
+  /* Om os side */
+
+  .om_os #first_section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: 4rem;
+  }
+
+  .om_os_tekst {
+    background-color: #f7e2d4;
+    padding: 2rem;
+    padding-top: 1rem;
+  }
+
+  .om_os_tekst p {
+    text-align: left;
   }
 
   .om_os_billede {
-    display: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
-
-  .kontaktformular {
-    padding-top: 2rem;
+  .om_os .kontaktformular #first_section {
+    grid-column: 1/3;
   }
-
-  .kontaktformular h2 {
-    text-align: center;
-  }
-
-  
 }
