--- a/style.css
+++ b/style.css
@@ -57,10 +57,10 @@ p {
 .om_os #first_section {
   padding: 0.1rem;
   padding-top: 1rem;
+  background-color: #b6d3b4c2;
 }
 
 .om_os_tekst {
-  background-color: #f7e2d4;
   padding: 1rem;
   text-align: center;
   padding-top: 1rem;
@@ -87,9 +87,10 @@ p {
 input[type="text"],
 select,
 textarea {
+  border: 2px solid #b6d3b4b6;
   width: 100%;
   padding: 12px;
-  border: 1px solid rgb(255, 255, 255);
+  /* border: 1px solid rgb(255, 255, 255); */
   border-radius: 4px;
   box-sizing: border-box;
   margin-top: 6px;
@@ -114,12 +115,13 @@ input[type="submit"]:hover {
 
 /* Add a background color and some padding around the form */
 .container {
-  background-color: #f1d0c0;
+  border: 3px solid #b6d3b4b6;
   padding: 20px;
 }
 
 label {
   font-family: balboa-plus-fill, sans-serif;
+  letter-spacing: 0.2ch;
 }
 
 /*BURGERMENU*/
@@ -184,6 +186,7 @@ header nav {
 
 /********************** INDEX *********************/
 /*Splashbillede*/
+
 .index #first_section {
   grid-column: 1/4;
   width: 100%;
@@ -202,8 +205,17 @@ header nav {
   padding: 0.58rem;
   color: #ff603f;
 }
+
 .index #second_section {
   text-align: center;
+}
+
+.index h3 {
+  text-align: center;
+}
+
+.index button {
+  width: 9.5rem;
 }
 
 .index .data_container {
@@ -211,7 +223,8 @@ header nav {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   margin: 1rem;
 }
-.index #liste {
+
+#liste {
   display: grid;
   place-content: center;
   border: solid orange 0.1rem;
@@ -221,10 +234,13 @@ header nav {
   text-align: center;
   cursor: pointer;
 }
-.index #liste:hover {
-  border: solid orange 0.3rem;
+
+#liste:hover {
+  /* border: solid orange 0.3rem; */
+  background-color: #f3f4e6;
 }
-.index #liste img {
+
+#liste img {
   height: 17rem;
   width: auto;
 }
@@ -263,10 +279,6 @@ header nav {
   cursor: pointer;
 }
 
-.destinationer #liste:hover {
-  border: solid orange 0.3rem;
-}
-
 .destinationer #liste img {
   height: 17rem;
   width: auto;
@@ -281,6 +293,8 @@ header nav {
 
 button {
   font-family: balboa-plus-fill, sans-serif;
+  letter-spacing: 0.2ch;
+  font-size: 1rem;
   color: black;
   border: 0.1rem solid black;
   background-color: transparent;
@@ -288,10 +302,11 @@ button {
   margin: 0.5rem;
   width: 8rem;
   cursor: pointer;
+  text-align: center;
 }
 
-button:hover{
-  background-color: #f5ecbd;
+button:hover {
+  background-color: #f3f4e6;
 }
 
 button:hover:after {
@@ -308,9 +323,9 @@ button:after {
   transition: 0.5s;
 }
 
-.valgt {background-color: #f5ecbd;}
-
-
+.valgt {
+  background-color: #f3f4e6;
+}
 
 /********************** SINGLEVIEW *********************/
 #single_liste,
@@ -324,7 +339,7 @@ button:after {
   justify-content: center;
 }
 
-#single_liste h1 {
+#single_liste h2 {
   text-align: center;
 }
 
@@ -371,11 +386,17 @@ footer a {
 footer a:hover {
   color: #00000052;
 }
-@media (min-width: 700px) {
-}
 
 @media (min-width: 700px) {
   /********************** FOOTER *********************/
+  button {
+    font-size: 1.2rem;
+  }
+
+  #menu li {
+    padding: 1rem;
+  }
+
   footer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -390,6 +411,12 @@ footer a:hover {
   }
 }
 
+/* @media (min-width: 900px) {
+  #menu li {
+    padding: 1.5rem;
+  }
+} */
+
 @media (min-width: 1100px) {
   /***********Burgermenu**********/
   #menuknap {
@@ -403,7 +430,7 @@ footer a:hover {
 
   #menu li {
     display: inline-block;
-    padding: 2rem;
+    padding: 1.3rem;
   }
 
   .logo img {
@@ -411,8 +438,8 @@ footer a:hover {
   }
 
   .logo {
-    text-align: center;
-    grid-column: 2/3;
+    grid-column: 3/4;
+    padding-right: 4rem;
   }
 
   /* Hover-effekt menu - understregning */
@@ -435,7 +462,7 @@ footer a:hover {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
-  #single_liste h1 {
+  #single_liste h2 {
     grid-column: 1/3;
   }
 
@@ -448,7 +475,6 @@ footer a:hover {
   }
 
   .om_os_tekst {
-    background-color: #f7e2d4;
     padding: 2rem;
     padding-top: 1rem;
   }
