--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ img {
 h1 {
   font-family: balboa-plus-primary, sans-serif;
   font-weight: 400;
-  font-size: 3.6rem;
+  font-size: 3.2rem;
+  display: none;
 }
 
 h2 {
@@ -57,21 +58,28 @@ p {
 .om_os #first_section {
   padding: 0.1rem;
   padding-top: 1rem;
+  padding-bottom: 2rem;
   background-color: #b6d3b4c2;
+  display: grid;
+  place-items: center;
 }
 
 .om_os_tekst {
   padding: 1rem;
-  text-align: center;
-  padding-top: 1rem;
+  display: grid;
+  justify-content: center;
+  grid-column: 1/3;
 }
 
-.om_os_tekst p {
-  text-align: left;
+.om_os #first_section button {
+  margin-top: 0;
+  grid-column: 1/3;
 }
 
 .om_os_billede {
   display: none;
+  padding: 0;
+  margin: 0;
 }
 
 .kontaktformular {
@@ -214,7 +222,8 @@ header nav {
   text-align: center;
 }
 
-.index button {
+.index button,
+.om_os button {
   width: 9.5rem;
 }
 
@@ -389,6 +398,10 @@ footer a:hover {
 
 @media (min-width: 700px) {
   /********************** FOOTER *********************/
+  h1 {
+    display: inline;
+  }
+
   button {
     font-size: 1.2rem;
   }
@@ -477,6 +490,7 @@ footer a:hover {
   .om_os_tekst {
     padding: 2rem;
     padding-top: 1rem;
+    grid-column: 1/2;
   }
 
   .om_os_tekst p {
