--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ img {
 h1 {
   font-family: balboa-plus-primary, sans-serif;
   font-weight: 400;
-  font-size: 3.2rem;
+  font-size: clamp(3.2rem, 3.0143rem + 0.7924vw, 4.5rem);
   display: none;
 }
 
@@ -28,23 +28,23 @@ h2 {
   font-family: balboa-plus-fill, sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 2rem;
+  font-size: clamp(1.5rem, 1.3571rem + 0.6095vw, 2.5rem);
 }
 
 h3 {
   font-family: balboa-plus-fill, sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 1.5rem;
+  font-size: clamp(1.2rem, 1.1571rem + 0.1829vw, 1.5rem);
 }
 
-h4 {
+/* h4 {
   font-family: balboa-plus-fill, sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 2.2rem;
   text-align: center;
-}
+} */
 
 p {
   font-family: nimbus-sans, sans-serif;
@@ -69,6 +69,10 @@ p {
   display: grid;
   justify-content: center;
   grid-column: 1/3;
+}
+
+.om_os h2 {
+  text-align: center;
 }
 
 .om_os #first_section button {
@@ -423,12 +427,6 @@ footer a:hover {
     grid-row: 1;
   }
 }
-
-/* @media (min-width: 900px) {
-  #menu li {
-    padding: 1.5rem;
-  }
-} */
 
 @media (min-width: 1100px) {
   /***********Burgermenu**********/
