--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ img {
 h1 {
   font-family: balboa-plus-primary, sans-serif;
   font-weight: 400;
-  font-size: clamp(3.2rem, 3.0143rem + 0.7924vw, 4.5rem);
+  font-size: clamp(3.2rem, 2.9429rem + 1.0971vw, 5rem);
   display: none;
 }
 
@@ -28,29 +28,21 @@ h2 {
   font-family: balboa-plus-fill, sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: clamp(1.5rem, 1.3571rem + 0.6095vw, 2.5rem);
+  font-size: clamp(1.5rem, 1.2857rem + 0.9143vw, 3rem);
 }
 
 h3 {
   font-family: balboa-plus-fill, sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: clamp(1.2rem, 1.1571rem + 0.1829vw, 1.5rem);
+  font-size: clamp(1.3rem, 1.2rem + 0.4267vw, 2rem);
 }
-
-/* h4 {
-  font-family: balboa-plus-fill, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 2.2rem;
-  text-align: center;
-} */
 
 p {
   font-family: nimbus-sans, sans-serif;
   font-weight: 300;
   font-style: normal;
-  font-size: 1.2rem;
+  font-size: clamp(1rem, 0.9571rem + 0.1829vw, 1.3rem);
   max-width: 60ch;
 }
 
@@ -205,7 +197,7 @@ header nav {
   height: 40vh;
   background-image: url(img/splash.svg);
   background-size: cover;
-  background-position: 47% 0%;
+  background-position: 10% 0%;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   grid-template-rows: repeat(3, 1fr);
@@ -400,6 +392,12 @@ footer a:hover {
   color: #00000052;
 }
 
+@media (min-width: 600px) {
+  .index #first_section {
+    height: 70vh;
+  }
+}
+
 @media (min-width: 700px) {
   /********************** FOOTER *********************/
   h1 {
@@ -425,6 +423,12 @@ footer a:hover {
   }
   footer .mail {
     grid-row: 1;
+  }
+}
+
+@media (min-width: 1000px) {
+  .index #first_section {
+    height: 100vh;
   }
 }
 
