--- a/style.css
+++ b/style.css
@@ -42,8 +42,9 @@ p {
   font-family: nimbus-sans, sans-serif;
   font-weight: 300;
   font-style: normal;
-  font-size: clamp(1rem, 0.9571rem + 0.1829vw, 1.3rem);
+  font-size: clamp(1.1rem, 1.0429rem + 0.2438vw, 1.5rem);
   max-width: 60ch;
+  line-height: 1.5rem;
 }
 
 /* Om os side */
@@ -212,6 +213,12 @@ header nav {
 
 .index #second_section {
   text-align: center;
+  display: grid;
+  justify-content: center;
+}
+
+.index section {
+  margin-bottom: 2rem;
 }
 
 .index h3 {
@@ -227,6 +234,7 @@ header nav {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   margin: 1rem;
+  text-align: center;
 }
 
 #liste {
