--- a/style.css
+++ b/style.css
@@ -47,6 +47,12 @@ p {
   line-height: 1.5rem;
 }
 
+.bold {
+  font-family: nimbus-sans, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
 /* Om os side */
 .om_os #first_section {
   padding: 0.1rem;
@@ -190,6 +196,10 @@ header nav {
 }
 
 /********************** INDEX *********************/
+#pil_ned {
+  display: none;
+}
+
 /*Splashbillede*/
 
 .index #first_section {
@@ -201,14 +211,7 @@ header nav {
   background-position: 10% 0%;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
-  grid-template-rows: repeat(3, 1fr);
-}
-.index #first_section h1 {
-  grid-column: 2/3;
-  grid-row: 2/3;
-  background-color: #f3f4e6;
-  padding: 0.58rem;
-  color: #ff603f;
+  grid-template-rows: repeat(4, 1fr);
 }
 
 .index #second_section {
@@ -218,6 +221,7 @@ header nav {
 }
 
 .index section {
+  margin-top: 3rem;
   margin-bottom: 2rem;
 }
 
@@ -346,12 +350,6 @@ button:after {
   grid-column: 2/3;
 }
 
-#single_liste {
-  padding: 0.5rem;
-  display: grid;
-  justify-content: center;
-}
-
 #single_liste h2 {
   text-align: center;
 }
@@ -404,12 +402,27 @@ footer a:hover {
   .index #first_section {
     height: 70vh;
   }
+  #single_liste {
+    padding: 0.5rem;
+    display: grid;
+    place-items: center;
+  }
 }
 
 @media (min-width: 700px) {
   /********************** FOOTER *********************/
   h1 {
     display: inline;
+  }
+
+  #pil_ned {
+    display: inline;
+    text-decoration: none;
+    font-size: 4rem;
+    rotate: 270deg;
+    grid-column: 2/3;
+    grid-row: 2;
+    color: #000;
   }
 
   button {
@@ -437,6 +450,9 @@ footer a:hover {
 @media (min-width: 1000px) {
   .index #first_section {
     height: 100vh;
+  }
+  #pil_ned {
+    grid-row: 3;
   }
 }
 
@@ -515,5 +531,22 @@ footer a:hover {
   }
   .om_os .kontaktformular #first_section {
     grid-column: 1/3;
+  }
+}
+
+/* oprettelse og definition af animation "pulse" på pil INDEX */
+.pulse {
+  animation-name: pulse_kf;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+}
+@keyframes pulse_kf {
+  from {
+    transform: scale(100%);
+  }
+  to {
+    transform: scale(80%);
   }
 }
