--- a/style.css
+++ b/style.css
@@ -24,11 +24,16 @@ h1 {
   display: none;
 }
 
+h1 a {
+  text-decoration: none;
+  color: #000;
+}
+
 h2 {
   font-family: balboa-plus-fill, sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: clamp(1.5rem, 1.2857rem + 0.9143vw, 3rem);
+  font-size: clamp(1.5rem, 1.3889rem + 0.5926vw, 2.5rem);
 }
 
 h3 {
@@ -349,7 +354,6 @@ button:after {
 #tilbage_knap {
   grid-column: 2/3;
 }
-
 #single_liste h2 {
   text-align: center;
 }
@@ -410,7 +414,6 @@ footer a:hover {
 }
 
 @media (min-width: 700px) {
-  /********************** FOOTER *********************/
   h1 {
     display: inline;
   }
